src/styles/BarangSaya.css
* {
    margin: 0;
    padding: 0;
  }
  
  .barang-saya {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    margin-top: 20px;
    width: 100%;
  }

  .barang-saya h1 {
    font-size: 32px;
    margin-top: 30px;
  }

  .barangsaya-list {
    margin-top: 40px;
    margin-bottom: 40px;
  }

  .barang-saya_container {
    width: 50%;
  }

  .Barang-saya_item {
    border: 2px solid #d9d9d9;
    border-radius: 20px;
    margin: 20px 50px;
  }
  
  .Barang-saya_item__header {
    background-color: #97b9a8;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    border-bottom: 1px solid black;
    padding: 20px;
    font-size: 20px; 
    text-align: center;
  }

  .Barang-saya_item__header h3 {
    margin-bottom: 0;
  }
  
  .Barang-saya_item__body {
    padding: 20px;
    display: flex;
    flex: 1;
  }
  
  .Barang-saya_item__body-image {
    width: 50%;
    border-radius: 10px;
  }

  .Barang-saya_itemful{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
    text-align: left;
    margin-left: 20px;
    gap: 50px;
  }
  
  .Barang-saya_item__body-deskripsi {
    font-size: 16px;
    gap: 20px;
  }

  .Barang-saya_item__body-deskripsi h4 {
    font-size: 20px;
  }
  .Barang-saya_item__body-deskripsi p {
    margin-bottom: 0;
  }

  .hapus-btn{
    margin-left: auto;
    max-width: 100px;
    padding: 10px 25px;
    font-weight: bold;
    border-radius: 5px;
    border: 1px solid #386159;
    cursor: pointer;
  }

  .add-barang-saya_btn {
    background-color:#386159 ;
    border: 1px solid gainsboro;
    border-radius: 10px;
    padding: 10px 32px;
    text-align: center;
    font-size: 16px;
    margin: 20px 2px;
    cursor: pointer;
    color: white;
    margin-bottom: 50px;
  }

  @media screen and (max-width: 1000px) {
    .barang-saya_container {
      width: 70%;
    }
  }

  @media screen and (max-width: 750px) {
    .barang-saya_container {
      width: 100%;
      margin-top: 20px;
    }
  }

  @media screen and (max-width: 550px) {
    .hapus-btn{
      margin-left: auto;
      max-width: 100px;
      padding: 10px 25px;
      font-weight: bold;
      border-radius: 5px;
      border: 1px solid #386159;
      cursor: pointer;
    }
  }

  @media screen and (max-width: 380px) {
    .barang-saya_container {
      width: 100%;
    }
  }
  

 

